--- a/tomcat/templates/tomcat.service.j2
+++ b/tomcat/templates/tomcat.service.j2
@@ -4,18 +4,17 @@ After=syslog.target network.target
 
 [Service]
 Type=forking
-User={{ tomcat_user }}
-Group={{ tomcat_group }}
+User={{tomcat_user}}
+Group={{tomcat_group}}
 
 Environment=JAVA_HOME=/usr/lib/jvm/jre
 Environment='JAVA_OPTS=-Djava.awt.headless=true'
-Environment=CATALINA_HOME={{ tomcat_home }}
-Environment=CATALINA_BASE={{ tomcat_home }}
-Environment=CATALINA_PID={{ tomcat_home }}/temp/tomcat.pid
+Environment=CATALINA_HOME=/usr/share/{{tomcat_zipfile}}
+Environment=CATALINA_BASE=/usr/share/{{tomcat_zipfile}}
+Environment=CATALINA_PID=/usr/share/{{tomcat_zipfile}}/temp/tomcat.pid
 Environment='CATALINA_OPTS=-Xms512M -Xmx1024M'
-ExecStart={{ tomcat_home }}/bin/catalina.sh start
-ExecStop={{ tomcat_home }}/bin/catalina.sh stop
+ExecStart=/usr/share/{{tomcat_zipfile}}/bin/catalina.sh start
+ExecStop=/usr/share/{{tomcat_zipfile}}/bin/catalina.sh stop
 
 [Install]
 WantedBy=multi-user.target
-
